# OpenAL-Experiments

./: .gitignore  README.md
src/helloOAL/: CMakeLists.txt  main.c
tools/: buildEmscriptenRun.sh  buildNativeRun.sh
